<resources>
    <string name="app_name">UberShipper</string>
    <string name="login_by_shipper">LOGIN TO SHIPPER</string>
    <string name="register">Register new account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="action_settings">Settings</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading">Loading</string>

    <string name="facebook_app_id">1053648038102502</string>
    <string name="name">Name</string>
    <string name="phone">Phone number</string>
    <string name="retype_password">Retype passwprd</string>
    <string name="register_button">Register</string>

    <string name="notify_validate_email">Email không đúng format</string>
    <string name="error_prefix_content">Số điện thoại phải bao gồm só 0 đầu tiên</string>
    <string name="error_phone_content">Số điện thoại phải bao gồm 10 hoặc 11 ký tự</string>
    <string name="notify_empty_input_register_user">Bạn cần đăng nhập đầy đủ thông </string>
    <string name="error_confirm_register_password">Mật khẩu không trùng khớp</string>
    <string name="notify_validate_password_lenght">Mật khẩu phải chứa ít nhất 8 ký tự</string>
    <string name="personal_information">Thông tin cá nhân</string>
    <string name="word_address">Nơi làm việc</string>
    <string name="customer">LOGIN CUSTOMER</string>
    <string name="shipper">LOGIN SHIPPER</string>
    <string name="shop">LOGIN SHOP</string>
    <string name="login_by_shop">LOGIN SHOP</string>

</resources>
