<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.vuongtc.uet.uber_shipper.activities.ShopLoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_above="@+id/ln_pass"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:id="@+id/viewName"
        >
        <RelativeLayout
            android:layout_width="36dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/account"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                />
        </RelativeLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/shop_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:imeOptions="actionNext"
                android:layout_margin="3dp"
                android:textSize="12dip">
                <requestFocus />
            </EditText>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_centerInParent="true"
        android:id="@+id/ln_pass"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        >
        <RelativeLayout
            android:layout_width="36dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/lock"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                />
        </RelativeLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/shop_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textSize="12dip"
                android:layout_margin="3dp"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_above="@+id/viewName"
        android:layout_marginBottom="20dip"
        android:text="@string/login_by_shop"
        android:gravity="center"
        android:textSize="30dip"
        android:textColor="@android:color/white"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:id="@+id/btn_login_by_shop"
        android:layout_below="@+id/ln_pass"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="20dp"
        android:text="Login"
        android:padding="5dp"
        android:textSize="15dip"
        android:typeface="monospace"
        style="@style/AppTheme"
        android:textColor="@android:color/white"
        android:background="@drawable/login_bg"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:layout_below="@+id/ln_pass"
        android:layout_toRightOf="@+id/btn_login_by_shop"
        android:layout_toEndOf="@+id/btn_login_by_shop"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:gravity="center"
        android:id="@+id/linearLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/register"
            android:id="@+id/tv_register_shop"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center"
            android:textSize="12dip"
            android:textStyle="italic"
            android:typeface="serif"
            android:textColor="@android:color/holo_red_light"
            />
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/account_plus"
            android:id="@+id/iv_register_shop"
            />
    </LinearLayout>

</RelativeLayout>
